--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name - CV/Resume</title>
+    <title>Andreea Manole - CV/Resume</title>
   </head>
 
-  <body></body>
+  <body>
+    <br>
+    <br>
+    <h1>Resume</h1>
+    <h2>Andreea Manole</h2>
+    <p class="head">Interests</p>
+    <ul>
+        <li>Horror movies</li>
+        <li>Old music</li>
+        <li>Spotify</li>
+        <li>Night walks</li>
+    </ul>
+  </body>
 </html>
