--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
         <li>Spotify</li>
         <li>Night walks</li>
     </ul>
+    <br>
+    <p class="skills">Education</p>
+    <ul>
+        <li>Technical University of Moldova, Software Engineering Bachelors</li>
+    </ul>
+
   </body>
 </html>
