Add meta tag <meta name="author" content="[Your Name]">

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Andreea Manole - CV/Resume</title>
+    <meta name="author" content="[Your Name]">
+    <title>Andreea Manole   - CV/Resume</title>
   </head>
 
   <body>
@@ -18,5 +19,11 @@
         <li>Spotify</li>
         <li>Night walks</li>
     </ul>
+    <br>
+    <p class="skills">Education</p>
+    <ul>
+        <li>Technical University of Moldova, Software Engineering Bachelors</li>
+    </ul>
+
   </body>
 </html>
