--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     <ul>
         <li>Technical University of Moldova, Software Engineering Bachelors</li>
     </ul>
+    <br>
+    <p class="Projects">Projects</p>
+    <ul>
+        <li>PBL semester 1, web application idea generating</li>
+        <li>PBL semeter 2, IoT project for local pollution detection</li>
+        <li>PBL semester 3, Online Digital Wallet</li>
+        <li>PBL semester 4, Genereal Purpose Language developer </li>
+        <li>PBL semester 5, Online Digital Signature genration platform</li>
+    </ul>
 
   </body>
 </html>
