--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <br>
     <h1>Resume</h1>
     <h2>Andreea Manole</h2>
+    <p class="Contacts">Contacts</p>
+    <ul>
+        <li>Phone: 068371527</li>
+        <li>Email: andreeamanole2020@gmail.com</li>
+    </ul>
+    <br>
     <p class="head">Interests</p>
     <ul>
         <li>Horror movies</li>
@@ -22,6 +28,15 @@
     <p class="skills">Education</p>
     <ul>
         <li>Technical University of Moldova, Software Engineering Bachelors</li>
+    </ul>
+    <br>
+    <p class="Projects">Projects</p>
+    <ul>
+        <li>PBL semester 1, web application idea generating</li>
+        <li>PBL semeter 2, IoT project for local pollution detection</li>
+        <li>PBL semester 3, Online Digital Wallet</li>
+        <li>PBL semester 4, Genereal Purpose Language developer </li>
+        <li>PBL semester 5, Online Digital Signature genration platform</li>
     </ul>
 
   </body>
